an attempt at mobile responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,11 +10,11 @@
     class="selection:bg-green-800 selection:text-green-50 relative cursor-none"
     id="home"
   >
-    <div class="w-full h-6 bg-black sticky -mb-6 top-0 top-border"></div>
-    <div class="p-6 bg-black">
+    <div class="w-full h-4 md:h-6 bg-black sticky -mb-6 top-0 top-border"></div>
+    <div class="md:p-6 p-4 bg-black">
       <div class="text-primary rounded-3xl text-xl bg-foreground texture-50">
         <header
-          class="text-background bg-foreground bg-fixed texture-50 rounded-t-3xl sticky top-6 p-16 z-0"
+          class="text-background sm:p-4 bg-foreground bg-fixed texture-50 rounded-t-3xl sticky top-6 p-6 lg:p-16 z-0"
         >
           <nav class="flex w-full justify-between items-center">
             <div class="flex items-center gap-4">
@@ -27,9 +27,10 @@
                   class="w-4 h-4 rounded-full bg-background animate-pulse"
                 ></div>
 
-                Available for work <span>June 2024</span>
+                Available for work
+                <span class="hidden lg:inline">June 2024</span>
               </div>
-              <ul class="flex gap-4">
+              <ul class="lg:flex gap-4 hidden">
                 <li class="hover:-translate-y-1 duration-100 hover:text-black">
                   <a href="#services">Services</a>
                 </li>
@@ -47,9 +48,9 @@
           </nav>
 
           <div
-            class="mt-16 grid grid-cols-9 gap-6 header-content sticky top-0 left-0"
+            class="mt-16 grid grid-cols-9 gap-4 lg:gap-6 header-content sticky top-0 left-0"
           >
-            <div class="col-span-4">
+            <div class="md:col-span-4 col-span-9">
               <h1 class="font-semibold text-7xl font-sans">
                 <img
                   src="./assets/images/my-name.svg"
@@ -59,7 +60,7 @@
                 />
               </h1>
               <div
-                class="bg-background px-6 py-1 leading-none rounded-full text-foreground font-semibold mt-12 w-full overflow-x-hidden flex relative marquee-parent"
+                class="bg-background px-6 py-1 leading-none rounded-full text-foreground font-semibold mt-6 md:mt-12 w-full overflow-x-hidden flex relative marquee-parent"
               >
                 <div
                   class="flex items-center justify-between gap-4 whitespace-pre marquee pl-4"
@@ -111,7 +112,9 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-4 col-start-6 flex flex-col items-start">
+            <div
+              class="md:col-span-4 col-span-9 lg:col-start-6 mt-6 md:mt-0 flex flex-col items-start"
+            >
               <div class="flex gap-6">
                 <img
                   src="./assets/icons/star.svg"
@@ -140,7 +143,7 @@
                 />
               </div>
 
-              <p class="text-3xl mt-auto">
+              <p class="text-3xl md:mt-auto mt-4">
                 Helping businesses all over the world gain their unfair
                 advantage by crafting visions into digital experiences people
                 cherish.
@@ -150,15 +153,17 @@
         </header>
         <main class="z-20 relative rounded-3xl">
           <section
-            class="bg-background text-foreground rounded-3xl rounded-b-none p-16 texture"
+            class="bg-background text-foreground rounded-3xl rounded-b-none p-6 md:p-16 texture"
             id="services"
           >
             <div class="pb-16 space-y-6">
-              <h2 class="text-7xl uppercase font-semibold flex-1 font-header">
+              <h2
+                class="text-5xl md:text-7xl uppercase font-semibold flex-1 font-header"
+              >
                 What I Do :)
               </h2>
               <div class="flex gap-6">
-                <div class="flex-1"></div>
+                <div class="flex-1 hidden md:block"></div>
 
                 <p class="flex-1 text-3xl">
                   My obsession is to craft memorable digital experiences that
@@ -170,10 +175,10 @@
             <div class="sticky top-32 bg-background texture bg-fixed">
               <hr class="border border-foreground/20" />
               <div class="py-12">
-                <div class="flex gap-6 items-start">
+                <div class="flex flex-col md:flex-row gap-6 items-start">
                   <div class="flex-1">
                     <h2
-                      class="text-5xl uppercase font-semibold flex-1 font-header"
+                      class="text-3xl lg:text-5xl uppercase font-semibold flex-1 font-header"
                     >
                       <> Web Development
                     </h2>
@@ -184,7 +189,9 @@
                       accessible, and engaging.
                     </p>
                   </div>
-                  <ul class="text-3xl font-semibold flex flex-1 flex-col gap-4">
+                  <ul
+                    class="text-2xl lg:text-3xl font-semibold flex flex-1 flex-col gap-4"
+                  >
                     <li>Motion and Animations</li>
                     <hr class="border border-foreground/20" />
                     <li>3D Development</li>
@@ -197,10 +204,10 @@
             <div class="sticky top-32 bg-background texture bg-fixed">
               <hr class="border border-foreground/20" />
               <div class="py-12">
-                <div class="flex gap-6 items-start">
+                <div class="flex flex-col md:flex-row gap-6 items-start">
                   <div class="flex-1">
                     <h2
-                      class="text-5xl uppercase font-semibold flex-1 font-header"
+                      class="text-3xl md:text-5xl uppercase font-semibold flex-1 font-header"
                     >
                       ^ Web Design
                     </h2>
@@ -209,7 +216,9 @@
                       create lasting impressions.
                     </p>
                   </div>
-                  <ul class="text-3xl font-semibold flex flex-1 flex-col gap-4">
+                  <ul
+                    class="text-xl md:text-3xl font-semibold flex flex-1 flex-col gap-4"
+                  >
                     <li>Responsive Design</li>
                     <hr class="border border-foreground/20" />
                     <li>Wireframing</li>
@@ -220,10 +229,10 @@
             <div class="sticky top-32 bg-background texture bg-fixed">
               <hr class="border border-foreground/20" />
               <div class="py-12">
-                <div class="flex gap-6 items-start">
+                <div class="flex flex-col md:flex-row gap-6 items-start">
                   <div class="flex-1">
                     <h2
-                      class="text-5xl uppercase font-semibold flex-1 font-header"
+                      class="text-3xl md:text-5xl uppercase font-semibold flex-1 font-header"
                     >
                       [ ] Desktop and Mobile App Development
                     </h2>
@@ -232,7 +241,9 @@
                       seamlessly fit your users' needs.
                     </p>
                   </div>
-                  <ul class="text-3xl font-semibold flex flex-1 flex-col gap-4">
+                  <ul
+                    class="text-xl md:text-3xl font-semibold flex flex-1 flex-col gap-4"
+                  >
                     <li>Cross-platform Development</li>
                     <hr class="border border-foreground/20" />
                     <li>APIs and Integration</li>
@@ -244,11 +255,11 @@
             </div>
           </section>
           <section
-            class="w-full bg-background bg-fixed texture text-foreground px-16"
+            class="w-full bg-background bg-fixed texture text-foreground px-6 md:px-16"
             id="works"
           >
             <h2
-              class="text-7xl uppercase font-semibold flex-1 animate-header font-header"
+              class="text-5xl md:text-7xl uppercase font-semibold flex-1 animate-header font-header"
             >
               <span>S</span><span>E</span><span>L</span><span>E</span
               ><span>C</span><span>T</span><span>E</span><span>D</span
@@ -257,14 +268,16 @@
               ><span>\</span>
             </h2>
             <div class="overflow-hidden w-full works-wrapper rounded-3xl">
-              <div class="flex gap-6 flex-nowrap works">
+              <div
+                class="flex gap-4 lg:gap-6 md:flex-row flex-col flex-nowrap works"
+              >
                 <a
                   href="https://visualize-qakf.onrender.com"
                   target="_blank"
-                  class="block aspect-[3/2] h-screen py-6"
+                  class="block aspect-[3/2] md:h-screen md:py-6"
                 >
                   <div
-                    class="h-full w-full rounded-lg bg-no-repeat bg-cover bg-center flex items-center justify-center p-16"
+                    class="h-full w-full rounded-lg bg-no-repeat bg-cover bg-center flex items-center justify-center p-6 md:p-16"
                     id="work-visualize"
                   >
                     <img
@@ -274,9 +287,9 @@
                     />
                   </div>
                 </a>
-                <div class="aspect-[3/2] h-screen py-6">
+                <div class="aspect-[3/2] md:py-6 md:h-screen">
                   <div
-                    class="h-full w-full bg-cover rounded-lg p-16"
+                    class="h-full w-full bg-cover rounded-lg p-6 md:p-16"
                     id="work-amedie"
                     data-description="Desktop application aiding in a faster work environment and customer satisfaction."
                     data-title="Hospital Management System"
@@ -294,11 +307,11 @@
           </section>
 
           <section
-            class="bg-background bg-fixed texture text-foreground px-16 pb-16 pt-10 rounded-b-3xl min-h-screen grid grid-cols-9 gap-x-6"
+            class="bg-background bg-fixed texture text-foreground px-6 md:px-16 pb-6 md:pb-16 pt-10 rounded-b-3xl min-h-screen grid grid-cols-9 gap-x-6"
             id="about"
           >
             <h2
-              class="text-7xl text-foreground uppercase font-semibold flex-1 animate-header font-header col-span-5"
+              class="lg:text-7xl text-5xl text-foreground uppercase font-semibold flex-1 animate-header font-header col-span-full md:col-span-5"
             >
               <span>A</span> <span>L</span><span>i</span><span>t</span
               ><span>t</span><span>l</span><span>e</span> <span>b</span
@@ -306,7 +319,9 @@
               ><span>o</span><span>u</span><span>t</span> <span>m</span
               ><span>e</span><span>&nbsp;</span><span>;)</span>
             </h2>
-            <div class="row-start-2 col-start-4 col-span-3 -mt-12">
+            <div
+              class="row-start-2 md:col-start-4 col-span-full md:col-span-3 -mt-12"
+            >
               <img
                 src="./assets/images/me.png"
                 alt="Yohannes Takata"
@@ -314,7 +329,7 @@
               />
             </div>
             <p
-              class="col-span-full col-start-6 text-3xl row-start-3"
+              class="col-span-full md:col-start-6 text-3xl row-start-3"
               id="about-text"
             >
               Driven by my love for development, I take projects from inception
@@ -323,9 +338,9 @@
             </p>
           </section>
 
-          <section class="bg-foreground p-16 texture-50" id="contact">
+          <section class="bg-foreground p-6 md:p-16 texture-50" id="contact">
             <h2
-              class="text-7xl uppercase font-semibold flex-1 animate-header font-header text-background"
+              class="text-5xl md:text-7xl uppercase font-semibold flex-1 animate-header font-header text-background"
             >
               Don't just take my word for it
             </h2>
@@ -333,7 +348,7 @@
               <div
                 class="p-6 bg-card sticky top-32 backdrop-blur-xl rounded-3xl grid grid-cols-9"
               >
-                <div class="col-span-6 w-full">
+                <div class="md:col-span-6 col-span-full w-full">
                   <span class="">
                     <q class="col-span-6 text-2xl">
                       Besides designing an awesome website, Yohannes helped us
@@ -362,13 +377,13 @@
                 <img
                   src="./assets/images/circle-shapes.svg"
                   alt="Yohannes logo"
-                  class="w-full col-start-8 opacity-5 col-span-2"
+                  class="md:w-full w-0 col-start-8 opacity-5 col-span-2"
                 />
               </div>
               <div
                 class="p-6 bg-card sticky top-32 backdrop-blur-xl rounded-3xl grid grid-cols-9"
               >
-                <div class="col-span-6 w-full">
+                <div class="col-span-full md:col-span-6 w-full">
                   <span class="">
                     <q class="col-span-6 text-2xl">
                       Yohannes is a talented, web developer and designer with
@@ -395,13 +410,13 @@
                 <img
                   src="./assets/images/traingle-shapes.svg"
                   alt="Yohannes logo"
-                  class="w-full col-start-8 opacity-5 col-span-2"
+                  class="md:w-full w-0 col-start-8 opacity-5 col-span-2"
                 />
               </div>
             </div>
           </section>
           <section
-            class="bg-foreground p-16 texture-50 rounded-b-3xl relative"
+            class="bg-foreground p-6 md:p-16 texture-50 rounded-b-3xl relative"
             id="contact"
           >
             <div
@@ -417,14 +432,14 @@
                   class="w-0 rounded-3xl h-28 border-r-4 border-background"
                 ></div>
                 <div
-                  class="flex items-center gap-6 translate-x-1/2 opacity-0 flex-1"
+                  class="flex items-center gap-4 lg:gap-6 translate-x-1/2 opacity-0 flex-1"
                   id="contact-header"
                 >
                   <div>
                     <img
                       src="./assets/icons/pointer-hand.svg"
                       alt=""
-                      class="h-24 w-24"
+                      class="md:h-24 md:w-24 w-10 h-10"
                     />
                   </div>
                   <div class="flex-1">
@@ -438,7 +453,7 @@
               </div>
             </div>
             <div class="mt-6 grid grid-cols-9 gap-6">
-              <div class="col-span-4">
+              <div class="md:col-span-4 col-span-full">
                 <h3 class="font-semibold">Navigation</h3>
                 <hr class="border border-background my-3" />
                 <ul class="space-y-2">
@@ -451,7 +466,7 @@
                   <li class="hover:underline"><a href="#about">About</a></li>
                 </ul>
               </div>
-              <div class="col-span-4 col-start-6">
+              <div class="md:col-span-4 col-span-full md:col-start-6">
                 <h3 class="font-semibold">Socials</h3>
                 <hr class="border border-background my-3" />
                 <ul class="space-y-2">
