fixed top nav and added bottom name

--- a/src/index.html
+++ b/src/index.html
@@ -427,9 +427,9 @@
               id="contact-header-wrapper"
               class="flex items-center"
             >
-              <div class="flex items-center">
+              <div class="flex items-center gap-0">
                 <div
-                  class="w-0 rounded-3xl h-28 border-r-4 border-background"
+                  class="w-0 rounded-3xl h-28 border-r-4 border-background bg-rose-800"
                 ></div>
                 <div
                   class="flex items-center gap-4 lg:gap-6 translate-x-1/2 opacity-0 flex-1"
@@ -452,7 +452,7 @@
                 </div>
               </div>
             </div>
-            <div class="mt-6 grid grid-cols-9 gap-6">
+            <div class="mt-12 grid grid-cols-9 gap-6">
               <div class="md:col-span-4 col-span-full">
                 <h3 class="font-semibold">Navigation</h3>
                 <hr class="border border-background my-3" />
@@ -492,6 +492,14 @@
                     >
                   </li>
                 </ul>
+              </div>
+            </div>
+            <div class="grid-cols-9 grid mt-12 gap-6">
+              <div
+                class="text-7xl font-header font-semibold col-span-6 flex flex-col"
+              >
+                <span>&copy; 2024</span>
+                <span>YO TA.</span>
               </div>
             </div>
           </section>
