Update project structure with new server setup, enhance CSS with Tailwind updates, and add a personalized HTML page for Tsion.

--- a/src/index.html
+++ b/src/index.html
@@ -51,13 +51,8 @@
             class="mt-16 grid grid-cols-9 gap-4 lg:gap-6 header-content sticky top-0 left-0"
           >
             <div class="md:col-span-4 col-span-9">
-              <h1 class="font-semibold text-7xl font-sans">
-                <img
-                  src="./assets/images/my-name.svg"
-                  alt="YOHANNES TAKATA"
-                  class="w-full font-sans"
-                  draggable="false"
-                />
+              <h1 class="font-semibold text-[128px] leading-none font-sans">
+                YOHANNES TAKATA
               </h1>
               <div
                 class="bg-background px-6 py-1 leading-none rounded-full text-foreground font-semibold mt-6 md:mt-12 w-full overflow-x-hidden flex relative marquee-parent"
@@ -443,11 +438,7 @@
                     />
                   </div>
                   <div class="flex-1">
-                    <img
-                      src="./assets/images/get-in-touch.svg"
-                      alt="GET IN TOUCH"
-                      class=""
-                    />
+                    <span class="text-5xl md:text-[128px] leading-none font-semibold uppercase">GET IN TOUCH</span>
                   </div>
                 </div>
               </div>
@@ -498,7 +489,7 @@
               <div
                 class="text-7xl font-header font-semibold col-span-6 flex flex-col"
               >
-                <span>&copy; 2024</span>
+                <span>&copy; 2026</span>
                 <span>YO TA.</span>
               </div>
             </div>
